--- a/app/index.html
+++ b/app/index.html
@@ -25,15 +25,18 @@
       <div class="header">
         <ul class="nav nav-pills pull-right">
           <li ng-class="getClass('/home')"><a ng-href="#">Home</a></li>
-          <li ng-class="getClass('/issues')"><a ng-href="#/issues">Issues List</a></li>
+          <li ng-class="getClass('/issues')"><a ng-href="#/issues" ng-show="signedIn()">Issues List</a></li>
+          <li ng-class="getClass('/register')"><a ng-href="#/register" ng-hide="signedIn()">Sign Up</a></li>
+          <li ng-class="getClass('/login')"><a ng-href="#/login" ng-hide="signedIn()">Sign In</a></li>
+          <li><a ng-href="#" ng-click="logout()" ng-show="signedIn()">Logout</a></li>
         </ul>
-        <h3 class="text-muted">issuetracker</h3>
+        <img width="180px" src="images/issuetracker_logo.png" alt="IssueTracker" style="margin-bottom:10px">
       </div>
 
       <div ng-view=""></div>
 
       <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p>Built with <span class="glyphicon glyphicon-heart"></span></p>
       </div>
     </div>
 
@@ -82,6 +85,9 @@
         <script src="scripts/services/issue.js"></script>
         <script src="scripts/controllers/issue.js"></script>
         <script src="scripts/controllers/nav.js"></script>
+        <script src="scripts/services/auth.js"></script>
+        <script src="scripts/controllers/register.js"></script>
+        <script src="scripts/controllers/login.js"></script>
         <!-- endbuild -->
 </body>
 </html>
