--- a/app/index.html
+++ b/app/index.html
@@ -25,10 +25,10 @@
       <div class="header">
         <ul class="nav nav-pills pull-right">
           <li ng-class="getClass('/home')"><a ng-href="#">Home</a></li>
-          <li ng-class="getClass('/issues')"><a ng-href="#/issues" ng-show="signedIn()">Issues List</a></li>
+          <li ng-class="getClass('/issues')"><a ng-href="#/issues" ng-show="signedIn()"><span class="glyphicon glyphicon-th-list"></span> Issues List</a></li>
           <li ng-class="getClass('/register')"><a ng-href="#/register" ng-hide="signedIn()">Sign Up</a></li>
           <li ng-class="getClass('/login')"><a ng-href="#/login" ng-hide="signedIn()">Sign In</a></li>
-          <li><a ng-href="#" ng-click="logout()" ng-show="signedIn()">Logout</a></li>
+          <li><a ng-href="#" ng-click="logout()" ng-show="signedIn()"><span class="glyphicon glyphicon-off"></span> Logout</a></li>
         </ul>
         <img width="180px" src="images/issuetracker_logo.png" alt="IssueTracker" style="margin-bottom:10px">
       </div>
@@ -85,7 +85,7 @@
         <script src="scripts/services/issue.js"></script>
         <script src="scripts/controllers/issue.js"></script>
         <script src="scripts/controllers/nav.js"></script>
-        <script src="scripts/services/auth.js"></script>
+        <script src="scripts/services/authfirebase.js"></script>
         <script src="scripts/controllers/register.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <!-- endbuild -->
